fix: Make links more visible

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -15,8 +15,8 @@
   }
 
   a {
-    color: inherit;
-    text-decoration: none;
+    color: $link-color;
+    text-decoration: underline;
     &:hover{
       text-decoration: underline;
     }
